[gd_scene load_steps=29 format=3 uid="uid://cij121lnxfjeh"]

[ext_resource type="PackedScene" uid="uid://ctm67sw265j6c" path="res://Enemy/Medieval Base.fbx" id="1_2m5b2"]
[ext_resource type="Script" uid="uid://cjiypriu7rgau" path="res://Enemy/enemy_1.gd" id="1_aj68k"]
[ext_resource type="AnimationLibrary" uid="uid://sfwv46gcr4vm" path="res://Enemy/Medieval anim.fbx" id="2_txxp0"]
[ext_resource type="Script" uid="uid://c4jnob7p2vw3l" path="res://Main Player/Script/HealthComponent.gd" id="3_l03h4"]
[ext_resource type="Script" uid="uid://yrw2od6yq6bl" path="res://Main Player/Script/Hitbox.gd" id="3_rjd80"]
[ext_resource type="Animation" uid="uid://c7die8llpj3wb" path="res://Enemy/sword_slash_enemy.anim.res" id="6_b7jwc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_l03h4"]
size = Vector3(0.115967, 0.996124, 0.0394287)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uj1vm"]
radius = 0.240375
height = 1.87085

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rkx7g"]
_data = {
&"sword_slash_enemy.anim": ExtResource("6_b7jwc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aj68k"]
animation = &"new_anim/sword_slash_enemy.anim"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rkx7g"]
animation = &"Medieval anim/CharacterArmature|Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sk8mn"]
animation = &"Medieval anim/CharacterArmature|HitRecieve_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l03h4"]
animation = &"Medieval anim/CharacterArmature|Idle_Sword"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rjd80"]
animation = &"Medieval anim/CharacterArmature|Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b7jwc"]
animation = &"Medieval anim/CharacterArmature|Run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_b7jwc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_l03h4")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_rjd80")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_b7jwc")
blend_point_2/pos = 2.0
min_space = 0.0
max_space = 2.0
sync = true

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aj68k"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rkx7g"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sk8mn"]
xfade_time = 1.0
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5s4ho"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yenxk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bj6oi"]
xfade_time = 1.0
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_2m5b2"]
states/Attack/node = SubResource("AnimationNodeAnimation_aj68k")
states/Attack/position = Vector2(571, 161)
states/Die/node = SubResource("AnimationNodeAnimation_rkx7g")
states/Die/position = Vector2(684, 64)
states/Hurt/node = SubResource("AnimationNodeAnimation_sk8mn")
states/Hurt/position = Vector2(421, 300)
states/Movement/node = SubResource("AnimationNodeBlendSpace1D_b7jwc")
states/Movement/position = Vector2(351, 117)
transitions = ["Start", "Movement", SubResource("AnimationNodeStateMachineTransition_aj68k"), "Movement", "Attack", SubResource("AnimationNodeStateMachineTransition_rkx7g"), "Attack", "Movement", SubResource("AnimationNodeStateMachineTransition_sk8mn"), "Movement", "Die", SubResource("AnimationNodeStateMachineTransition_5s4ho"), "Movement", "Hurt", SubResource("AnimationNodeStateMachineTransition_yenxk"), "Hurt", "Movement", SubResource("AnimationNodeStateMachineTransition_bj6oi")]
graph_offset = Vector2(73, 40)

[sub_resource type="SphereShape3D" id="SphereShape3D_txxp0"]
radius = 17.8531

[sub_resource type="BoxShape3D" id="BoxShape3D_rjd80"]
size = Vector3(0.465576, 1.77246, 0.469238)

[sub_resource type="ViewportTexture" id="ViewportTexture_b7jwc"]
viewport_path = NodePath("HealthBarWidget/SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7jwc"]
bg_color = Color(1, 1, 1, 0.462745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rkx7g"]
bg_color = Color(0.784314, 0, 0.0117647, 1)

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_aj68k")

[node name="Skin" parent="." instance=ExtResource("1_2m5b2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.023708, -0.0119454, 0.00402862)

[node name="CharacterArmature" parent="Skin" index="0"]
transform = Transform3D(100, 0, 0, 0, -4.37114e-06, 100, 0, -100, -4.37114e-06, 0, 0, 0)

[node name="Skeleton3D" parent="Skin/CharacterArmature" index="0"]
bones/1/position = Vector3(3.55389e-06, 0.00937067, -3.99487e-05)
bones/1/rotation = Quaternion(-6.62477e-06, 0.234498, -2.74631e-05, 0.972116)
bones/3/rotation = Quaternion(-0.0193345, -7.41866e-09, -9.24266e-10, 0.999813)
bones/4/rotation = Quaternion(0.15366, -0.236526, -0.00532365, 0.959383)
bones/5/rotation = Quaternion(-0.0118401, 0.000100982, 1.39529e-05, 0.99993)
bones/6/rotation = Quaternion(-0.00916348, -6.9704e-08, -7.36886e-06, 0.999958)
bones/7/rotation = Quaternion(0.0010234, 4.00531e-08, 8.06972e-05, 0.999999)
bones/9/position = Vector3(0.00068513, 0.000381631, 0.000307987)
bones/9/rotation = Quaternion(-0.269814, -0.417607, -0.40977, 0.764783)
bones/10/rotation = Quaternion(-0.732215, -0.046241, -0.169972, 0.6579)
bones/11/rotation = Quaternion(-0.124869, -0.0197109, -0.193951, 0.972832)
bones/12/rotation = Quaternion(0.00929643, 0.00632024, 0.0233151, 0.999665)
bones/14/rotation = Quaternion(-0.00441244, 0.145921, 0.0931434, 0.984892)
bones/15/rotation = Quaternion(-0.0818605, -0.00278728, 0.0209236, 0.99642)
bones/16/rotation = Quaternion(-0.0302401, 0.0127248, 0.00602094, 0.999444)
bones/19/rotation = Quaternion(-0.0298342, 0.0536039, 0.00349819, 0.99811)
bones/20/rotation = Quaternion(-0.0823434, -0.0134454, -0.0221023, 0.996268)
bones/21/rotation = Quaternion(-0.0190482, 0.0352492, -0.00743692, 0.999169)
bones/24/rotation = Quaternion(-0.0226709, 0.0973577, -0.0208874, 0.994772)
bones/25/rotation = Quaternion(-0.101833, 0.0496944, -0.0286461, 0.993147)
bones/26/rotation = Quaternion(-0.0748089, 0.0279542, -0.00762858, 0.996777)
bones/29/rotation = Quaternion(-0.0766031, 0.0608134, -0.182085, 0.978406)
bones/30/rotation = Quaternion(-0.0894857, -0.0379283, -0.022308, 0.995016)
bones/31/rotation = Quaternion(-0.116958, -0.00965458, -0.00323035, 0.993085)
bones/33/rotation = Quaternion(-0.317099, -0.317893, -0.180712, 0.875063)
bones/34/rotation = Quaternion(0.0585993, 0.258361, 0.0174109, 0.964112)
bones/35/rotation = Quaternion(-0.140048, 0.0340767, 0.173855, 0.974166)
bones/37/position = Vector3(-0.00067834, 0.00038167, 0.000307914)
bones/37/rotation = Quaternion(-0.269814, 0.417607, 0.40977, 0.764783)
bones/38/rotation = Quaternion(-0.723358, 0.182069, 0.103012, 0.658022)
bones/39/rotation = Quaternion(-0.215437, -0.200697, 0.331043, 0.896503)
bones/40/rotation = Quaternion(0.00836921, -0.0100401, -0.0517506, 0.998574)
bones/42/rotation = Quaternion(-0.700735, -0.0139747, -0.190171, 0.687466)
bones/43/rotation = Quaternion(-0.62056, 0.00234558, 0.0254169, 0.783744)
bones/44/rotation = Quaternion(-0.866706, -0.0644569, 0.212807, 0.446519)
bones/46/rotation = Quaternion(-0.0116159, 0.0117943, -0.0165027, 0.999727)
bones/48/rotation = Quaternion(-0.720564, -0.0517291, 0.00575804, 0.691432)
bones/49/rotation = Quaternion(-0.638362, 0.0445214, 0.0875318, 0.763446)
bones/50/rotation = Quaternion(-0.922505, 0.038913, 0.0385436, 0.38208)
bones/52/rotation = Quaternion(-0.030456, 0.0289634, -0.128329, 0.990841)
bones/53/rotation = Quaternion(-0.695812, -0.102798, 0.141908, 0.69652)
bones/54/rotation = Quaternion(-0.543495, -0.0943898, 0.254389, 0.794349)
bones/55/rotation = Quaternion(-0.691626, -0.00850693, 0.521407, 0.499716)
bones/57/rotation = Quaternion(-0.0310906, 0.0273529, -0.227078, 0.972996)
bones/58/rotation = Quaternion(-0.584473, -0.157148, 0.236213, 0.760197)
bones/59/rotation = Quaternion(-0.646954, 0.0980321, 0.122544, 0.746206)
bones/60/rotation = Quaternion(-0.872208, 0.0368602, -0.0074647, 0.487687)
bones/62/rotation = Quaternion(-0.456275, 0.00509021, 0.362384, 0.81269)
bones/63/rotation = Quaternion(0.1493, -0.31432, 0.017121, 0.937347)
bones/64/rotation = Quaternion(-0.247235, -0.00642724, -0.364676, 0.897689)
bones/66/rotation = Quaternion(0.969318, 0.07347, -0.221855, 0.0761866)
bones/67/rotation = Quaternion(0.216232, -2.34302e-08, -7.39461e-10, 0.976342)
bones/69/rotation = Quaternion(0.968979, -0.0149932, 0.170534, 0.178249)
bones/70/rotation = Quaternion(0.188195, 7.15948e-09, 7.85245e-09, 0.982132)
bones/72/position = Vector3(0.000967648, 0.000229637, -0.00184641)
bones/72/rotation = Quaternion(0.614602, 0.346952, -0.344419, 0.619083)
bones/74/position = Vector3(0.00542519, 0.00649532, 0.00229153)
bones/76/position = Vector3(-0.000449473, 0.000231654, 0.00170947)
bones/76/rotation = Quaternion(0.704894, 0.0407541, -0.0406187, 0.706975)
bones/78/position = Vector3(5.10782e-05, 0.00447191, 0.00659052)

[node name="Sword" parent="Skin/CharacterArmature/Skeleton3D" index="0"]
transform = Transform3D(0.0293278, -0.321464, -0.946467, 0.283791, 0.910588, -0.300483, 0.958437, -0.259787, 0.117934, -0.00209318, -0.0017387, 0.00890032)
bone_idx = 47

[node name="Hitbox" type="Area3D" parent="Skin/CharacterArmature/Skeleton3D/Sword/Sword" index="0"]
collision_layer = 128
collision_mask = 16
script = ExtResource("3_rjd80")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Skin/CharacterArmature/Skeleton3D/Sword/Sword/Hitbox"]
transform = Transform3D(0.00644719, 0.000205533, 8.0198e-05, -0.000205088, 0.0064476, -3.66514e-05, -8.13248e-05, 3.40842e-05, 0.00645039, -4.5836e-05, -0.00423221, 0.000149716)
shape = SubResource("BoxShape3D_l03h4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.917496, 0.103249)
shape = SubResource("CapsuleShape3D_uj1vm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Skin")
libraries = {
&"Medieval anim": ExtResource("2_txxp0"),
&"new_anim": SubResource("AnimationLibrary_rkx7g")
}
speed_scale = 1.422

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Skin")
tree_root = SubResource("AnimationNodeStateMachine_2m5b2")
anim_player = NodePath("../AnimationPlayer")
parameters/Movement/blend_position = 0.00446429

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="DetectionArea" type="Area3D" parent="."]
transform = Transform3D(0.423519, 0, 0, 0, 0.423519, 0, 0, 0, 0.423519, 0, 0, 0)
collision_layer = 0
collision_mask = 66

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_txxp0")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_l03h4")

[node name="Hurtbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0823374)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0135498, 0.897949, 0.129639)
shape = SubResource("BoxShape3D_rjd80")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="KnockbackTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBarWidget" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.94957, 0.0777528)
billboard = 1
texture = SubResource("ViewportTexture_b7jwc")

[node name="SubViewport" type="SubViewport" parent="HealthBarWidget"]
disable_3d = true
transparent_bg = true
size = Vector2i(80, 8)

[node name="ProgressBar" type="ProgressBar" parent="HealthBarWidget/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_b7jwc")
theme_override_styles/fill = SubResource("StyleBoxFlat_rkx7g")
value = 50.0
show_percentage = false

[connection signal="area_entered" from="Skin/CharacterArmature/Skeleton3D/Sword/Sword/Hitbox" to="Skin/CharacterArmature/Skeleton3D/Sword/Sword/Hitbox" method="_on_area_entered"]

[editable path="Skin"]
